samples/_failures_safe/1761414462_68c9b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eddf27c.c: In function ‘main’:
./samples/SAFE/__tmp_2eddf27c.c:146:5: error: expected declaration or statement at end of input
  146 |     if (sum.data != NULL) {
      |     ^~
./samples/SAFE/__tmp_2eddf27c.c:146:5: error: expected declaration or statement at end of input
